fixed nav bar underline spacing, img and text alignment

--- a/style.css
+++ b/style.css
@@ -27,7 +27,8 @@ body{
   border-bottom: 2px solid transparent;
   text-decoration: none;
   transition: border-bottom 0.1s;
-  padding: 10px;
+  padding: 5px;
+  padding-bottom: 0px;
 }
 
 .page-link:hover,.site-title:hover {
@@ -42,23 +43,22 @@ body{
 }
 
 .about-img{
-  float: none; 
-  position: absolute; 
-  top:100px; right:100px;
+  float: right; 
+  padding:25px;
+  padding-top:50px;
+  height: auto;
+  max-width: 100%;
 }
 
 .about-text{
-  margin-top: 50px;
-  margin-left: 100px;
+  padding-left:100px;
+  padding-top:30px;
   font-size: larger;
+  min-width: 500px;
 }
 
 .bucketList-main,.bookList-main,.projects-main{
   padding-left: 100px;
-}
-
-aside{
-  text-align: right;
 }
 
 .aboutme-link{
